# quickcheck-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  suppress_warnings.cmake
src/: CMakeLists.txt  Person.h  multiplicationMethods.cpp  multiplicationMethods.h  reverseMethods.cpp  reverseMethods.h
src/GenOO/: GenOO.cpp  GenOO.h
test/: CMakeLists.txt  GenOOTest.cpp  GenTest.cpp  RapidCheckTest.cpp
